# drishti

./: CMakeLists.txt
src/app/acf/: CMakeLists.txt
src/app/cpr/: CMakeLists.txt
src/app/dlib/: CMakeLists.txt
src/app/eye/: CMakeLists.txt
src/app/face/: CMakeLists.txt
src/app/facecrop/: CMakeLists.txt
src/app/fddb/: CMakeLists.txt
src/app/landmarks/: CMakeLists.txt
src/app/pba/: CMakeLists.txt
src/app/pose/: CMakeLists.txt
src/app/qt/facefilter/: CMakeLists.txt
src/app/videoio/: CMakeLists.txt
src/benchmarks/opencv_size/: CMakeLists.txt
src/lib/drishti/: CMakeLists.txt
src/lib/drishti/acf/ut/: CMakeLists.txt
src/lib/drishti/core/ut/: CMakeLists.txt
src/lib/drishti/drishti/ut/: CMakeLists.txt
src/lib/drishti/eye/ut/: CMakeLists.txt
src/lib/drishti/face/ut/: CMakeLists.txt
src/lib/drishti/geometry/ut/: CMakeLists.txt
src/lib/drishti/hci/ut/: CMakeLists.txt
src/lib/drishti/ml/ut/: CMakeLists.txt
src/lib/drishti/testlib/: CMakeLists.txt
src/tests/address-sanitizer/: CMakeLists.txt
src/tests/beast/: CMakeLists.txt
src/tests/glfwimshow/: CMakeLists.txt
src/tests/json/: CMakeLists.txt
src/tests/serialize/: CMakeLists.txt
src/tests/thread-pool/: CMakeLists.txt
